GetTasksTodoMicroservice/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gettask
  template:
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask
        image: devtodoacrwestus.azurecr.io/addtask:latest
        ports:
        - containerPort: 8000  # see from video
